@@ -1001,7 +1001,10 @@ implements diredc feature `diredc-shell-guess-fallback'."
                              (funcall cmd `((file . ,file)))
                              (error nil))))
                (and (stringp cmd)
-                    (executable-find cmd)
+                    (executable-find
+                      (if (string-match "^ *\\([^ ]+\\) " cmd)
+                        (substring cmd (match-beginning 1) (match-end 1))
+                       cmd))
                     (push cmd cmds)))))
     (nreverse (delete-dups cmds))))
 
@@ -1098,19 +1101,29 @@ Usage: (advice-add 'dired-run-shell-command
 ;; `dired-shell-stuff-it' prior.
   (if (or (not diredc-async-processes-are-persistent)
           (string-match "^ " command)
-          (not (string-match "&$" command)))
+          (not (string-match "&wait&$" command)))
     (apply oldfun (list command))
-   (setq command (concat " " ; avoids adding command to shell history
-                         (substring command 0 (match-beginning 0))
-                         " & disown"))
-   (let ((buf (shell))
-         (kill-buffer-query-functions nil))
-     (delete-window)
-;;   (bury-buffer)
+   (setq command (concat (substring command 0 (match-beginning 0))))
+   (let* ((win (selected-window))
+          (buf (shell))
+          (kill-buffer-query-functions nil)
+          (cmd (when (string-match "^ *\\([^ ]+ \\)" command)
+                 (match-string 1 command)))
+          (separator (when cmd (concat "&" cmd)))
+          (cmds (when separator (split-string command separator)))
+          (suffix " & disown"))
+     (if (eq win (selected-window))
+       (bury-buffer)
+      (delete-window))
      (with-current-buffer buf
-       (insert command)
+       (when cmds
+         (setq command (pop cmds)))
+       (insert command suffix)
        (comint-send-input)
-       (sit-for 0.5 'nodisp)
+       (while (setq command (pop cmds))
+         (insert cmd command suffix)
+         (comint-send-input))
+       (sit-for 0.3 'nodisp)
        (kill-buffer)))
    ;; Return nil for sake of `nconc' in `dired-bunch-files'.
    nil))
@@ -1144,8 +1157,8 @@ locally define `dired-read-shell-command'. See there."
       (when (string-empty-p command)
         (user-error "No command entered. Nothing to do!"))
       (unless (executable-find
-                (if (string-match " " command)
-                  (substring command 0 (match-beginning 0))
+                (if (string-match "^ *\\([^ ]+\\) " command)
+                  (substring command (match-beginning 1) (match-end 1))
                  command))
         (user-error "Not a valid command!"))
       command)))
@@ -2244,8 +2257,8 @@ ARG is the prefix-arg."
            ;; (unless (executable-find command)
               (unless (or (string-match-p "^[ \t]+$" command)
                           (executable-find
-                            (if (string-match " " command)
-                              (substring command 0 (match-beginning 0))
+                            (if (string-match "^ *\\([^ ]+\\) " command)
+                              (substring command (match-beginning 1) (match-end 1))
                              command)))
                 (user-error "Not a valid command!"))
               command))))
